--- a/pianist/index.html
+++ b/pianist/index.html
@@ -25,7 +25,7 @@
       width: 100vw;
       height: 100vh;
       transform: translate(-50%, -50%);
-      object-fit: cover;
+      object-fit: contain;
       background: black;
       z-index: 0;
     }
