--- a/pianist/index.html
+++ b/pianist/index.html
@@ -176,78 +176,87 @@
 
   <script>
     const video = document.getElementById('myVideo');
-    const source = document.getElementById('videoSource');
-    const muteToggle = document.getElementById('muteToggle');
-    const fullScreenToggle = document.getElementById('fullScreenToggle');
-    const contentWrapperDiv = document.querySelector('.content-wrapper');
-    const backButton = document.getElementById('backButton');
+    const source = document.getElementById('videoSource');
+    const muteToggle = document.getElementById('muteToggle');
+    const fullScreenToggle = document.getElementById('fullScreenToggle');
+    const contentWrapperDiv = document.querySelector('.content-wrapper');
+    const backButton = document.getElementById('backButton');
 
-    function showContent() {
-      contentWrapperDiv.classList.remove('hidden');
-      backButton.style.display = 'none';
-      muteToggle.style.display = 'block'; // Mute button always visible
-      fullScreenToggle.style.display = 'none'; // **Hide fullscreen button when content is shown**
-      video.muted = true;
-      video.pause();
-      video.currentTime = 0;
-      source.src = "twinkle_twinkle.mp4"; // Reset to default background video
-      video.load();
-      video.play();
-    }
+    // Store the last known mute state
+    let isMuted = true;
 
-    function hideContent() {
-      contentWrapperDiv.classList.add('hidden');
-      backButton.style.display = 'block';
-      muteToggle.style.display = 'block'; // Mute button always visible
-      fullScreenToggle.style.display = 'block'; // **Show fullscreen button when content is hidden (video playing)**
-    }
+    function showContent() {
+      contentWrapperDiv.classList.remove('hidden');
+      backButton.style.display = 'none';
+      muteToggle.style.display = 'block'; // Mute button always visible
+      fullScreenToggle.style.display = 'none'; // Hide fullscreen button when content is shown
+      
+      // Restore the last known mute state, don't just mute it
+      video.muted = isMuted;
+      muteToggle.textContent = video.muted ? '🔊' : '🔇';
 
-    document.querySelectorAll('.clickable').forEach(el => {
-      el.addEventListener('click', () => {
-        const newSrc = el.getAttribute('data-src');
-        source.src = newSrc;
-        video.load();
-        video.muted = false; // Unmute when a specific video is selected
-        video.play();
-        hideContent();
-      });
-    });
+      video.pause();
+      video.currentTime = 0;
+      source.src = "twinkle_twinkle.mp4"; // Reset to default background video
+      video.load();
+      video.play();
+    }
 
-    backButton.addEventListener('click', () => {
-      showContent();
-    });
+    function hideContent() {
+      contentWrapperDiv.classList.add('hidden');
+      backButton.style.display = 'block';
+      muteToggle.style.display = 'block'; // Mute button always visible
+      fullScreenToggle.style.display = 'block'; // Show fullscreen button when content is hidden (video playing)
+    }
 
-    muteToggle.addEventListener('click', () => {
-      video.muted = !video.muted;
-      muteToggle.textContent = video.muted ? '🔇' : '🔊'; // Change to symbols only
-      video.volume = video.muted ? 0 : 1.0;
-    });
+    document.querySelectorAll('.clickable').forEach(el => {
+      el.addEventListener('click', () => {
+        const newSrc = el.getAttribute('data-src');
+        source.src = newSrc;
+        video.load();
+        // Do not change muted state here. Let the user decide with the mute button.
+        video.play();
+        hideContent();
+      });
+    });
 
-    fullScreenToggle.addEventListener('click', () => {
-      if (video.requestFullscreen) {
-        video.requestFullscreen();
-      } else if (video.webkitRequestFullscreen) { /* Safari */
-        video.webkitRequestFullscreen();
-      } else if (video.msRequestFullscreen) { /* IE11 */
-        video.msRequestFullscreen();
-      }
-    });
+    backButton.addEventListener('click', () => {
+      showContent();
+    });
 
-    // Handle fullscreen changes (e.g., if user exits fullscreen via ESC key)
-    document.addEventListener('fullscreenchange', () => {
-        if (!document.fullscreenElement) {
-            // When exiting fullscreen, we want the video to continue playing
-            // in its current view with controls.
-            // No explicit action is needed here because hideContent() already ensures
-            // mute and fullscreen buttons are visible when a specific video is playing,
-            // and the video itself continues playback.
-        }
-    });
+    muteToggle.addEventListener('click', () => {
+      video.muted = !video.muted;
+      muteToggle.textContent = video.muted ? '🔊' : '🔇'; // Change to symbols only
+      video.volume = video.muted ? 0 : 1.0;
+      // Update the stored state
+      isMuted = video.muted;
+    });
 
-    // Initial state setup
-    document.addEventListener('DOMContentLoaded', () => {
-        showContent(); // Ensures all buttons are in correct initial state
-    });
+    fullScreenToggle.addEventListener('click', () => {
+      if (video.requestFullscreen) {
+        video.requestFullscreen();
+      } else if (video.webkitRequestFullscreen) { /* Safari */
+        video.webkitRequestFullscreen();
+      } else if (video.msRequestFullscreen) { /* IE11 */
+        video.msRequestFullscreen();
+      }
+    });
+
+    // Handle fullscreen changes (e.g., if user exits fullscreen via ESC key)
+    document.addEventListener('fullscreenchange', () => {
+        if (!document.fullscreenElement) {
+            // When exiting fullscreen, we want the video to continue playing
+            // in its current view with controls.
+            // No explicit action is needed here because hideContent() already ensures
+            // mute and fullscreen buttons are visible when a specific video is playing,
+            // and the video itself continues playback.
+        }
+    });
+
+    // Initial state setup
+    document.addEventListener('DOMContentLoaded', () => {
+        showContent(); // Ensures all buttons are in correct initial state
+    });
 
   </script>
 
