--- a/pianist/index.html
+++ b/pianist/index.html
@@ -28,6 +28,7 @@
       object-fit: contain;
       background: black;
       z-index: 0;
+      filter: brightness(1.2);
     }
     .overlay {
       position: fixed; /* Keep overlay fixed over video */
