--- a/pianist/index.html
+++ b/pianist/index.html
@@ -143,7 +143,7 @@
       
       <div class="perform">
         <h3>Watch the robot perform:</h3>
-        <span class="clickable" data-src="twinkle_twinkle.mp4">Twinkle Twinkle (fully learned)</span>
+        <span class="clickable" data-src="twinkle_twinkle.mp4">Twinkle Twinkle<br>(fully learned)</span>
       </div>
 
       <div class="training-status">
