--- a/pianist/index.html
+++ b/pianist/index.html
@@ -25,9 +25,10 @@
       width: 100vw;
       height: 100vh;
       transform: translate(-50%, -50%);
-      object-fit: cover;
+      object-fit: contain;
       background: black;
       z-index: 0;
+      filter: brightness(1.2);
     }
     .overlay {
       position: fixed; /* Keep overlay fixed over video */
@@ -122,8 +123,8 @@
       right: 20px; /* Align with fullscreen button */
     }
     #backButton {
-      top: 20px;
-      left: 20px;
+      top: 10px;
+      left: 0px;
       display: none; /* Only visible when video is playing */
     }
   </style>
@@ -142,7 +143,7 @@
       
       <div class="perform">
         <h3>Watch the robot perform:</h3>
-        <span class="clickable" data-src="twinkle_twinkle.mp4">Twinkle Twinkle (fully learned)</span>
+        <span class="clickable" data-src="twinkle_twinkle.mp4">Twinkle Twinkle<br>(fully learned)</span>
       </div>
 
       <div class="training-status">
@@ -170,84 +171,110 @@
           The full code for this project will be published soon on GitHub: <a href="https://github.com/DarthAlexus96" target="_blank" style="color: rgba(255, 255, 255, 0.7);">DarthAlexus96</a>
         </div>
       </div>
-    </div> </div> <button id="muteToggle" class="control-button">🔊</button>
+    </div> </div> <button id="muteToggle" class="control-button">🔇</button>
   <button id="fullScreenToggle" class="control-button">⛶</button>
   <button id="backButton" class="control-button">← Back</button>
+<button id="brightnessUp" class="control-button">+</button>
+<button id="brightnessDown" class="control-button">-</button>
 
   <script>
     const video = document.getElementById('myVideo');
-    const source = document.getElementById('videoSource');
-    const muteToggle = document.getElementById('muteToggle');
-    const fullScreenToggle = document.getElementById('fullScreenToggle');
-    const contentWrapperDiv = document.querySelector('.content-wrapper');
-    const backButton = document.getElementById('backButton');
+    const source = document.getElementById('videoSource');
+    const muteToggle = document.getElementById('muteToggle');
+    const fullScreenToggle = document.getElementById('fullScreenToggle');
+    const contentWrapperDiv = document.querySelector('.content-wrapper');
+    const backButton = document.getElementById('backButton');
+    const brightnessUpButton = document.getElementById('brightnessUp');
+    const brightnessDownButton = document.getElementById('brightnessDown');
 
-    function showContent() {
-      contentWrapperDiv.classList.remove('hidden');
-      backButton.style.display = 'none';
-      muteToggle.style.display = 'block'; // Mute button always visible
-      fullScreenToggle.style.display = 'none'; // **Hide fullscreen button when content is shown**
-      video.muted = true;
-      video.pause();
-      video.currentTime = 0;
-      source.src = "twinkle_twinkle.mp4"; // Reset to default background video
-      video.load();
-      video.play();
-    }
+    // Store the last known mute state
+    let isMuted = true;
+    // Store the current brightness value
+    let currentBrightness = 1.0; // Start with a normal brightness (100%)
 
-    function hideContent() {
-      contentWrapperDiv.classList.add('hidden');
-      backButton.style.display = 'block';
-      muteToggle.style.display = 'block'; // Mute button always visible
-      fullScreenToggle.style.display = 'block'; // **Show fullscreen button when content is hidden (video playing)**
-    }
+    function showContent() {
+      contentWrapperDiv.classList.remove('hidden');
+      backButton.style.display = 'none';
+      muteToggle.style.display = 'block';
+      fullScreenToggle.style.display = 'none';
+      brightnessUpButton.style.display = 'none'; // Hide brightness controls
+      brightnessDownButton.style.display = 'none';
 
-    document.querySelectorAll('.clickable').forEach(el => {
-      el.addEventListener('click', () => {
-        const newSrc = el.getAttribute('data-src');
-        source.src = newSrc;
-        video.load();
-        video.muted = false; // Unmute when a specific video is selected
-        video.play();
-        hideContent();
-      });
-    });
+      // Restore the last known mute state
+      video.muted = isMuted;
+      muteToggle.textContent = video.muted ? '🔇' : '🔊';
 
-    backButton.addEventListener('click', () => {
-      showContent();
-    });
+      video.pause();
+      video.currentTime = 0;
+      source.src = "twinkle_twinkle.mp4";
+      video.load();
+      video.play();
+    }
 
-    muteToggle.addEventListener('click', () => {
-      video.muted = !video.muted;
-      muteToggle.textContent = video.muted ? '🔊' : '🔇'; // Change to symbols only
-      video.volume = video.muted ? 0 : 1.0;
-    });
+    function hideContent() {
+      contentWrapperDiv.classList.add('hidden');
+      backButton.style.display = 'block';
+      muteToggle.style.display = 'block';
+      fullScreenToggle.style.display = 'block';
+      brightnessUpButton.style.display = 'block'; // Show brightness controls
+      brightnessDownButton.style.display = 'block';
+    }
 
-    fullScreenToggle.addEventListener('click', () => {
-      if (video.requestFullscreen) {
-        video.requestFullscreen();
-      } else if (video.webkitRequestFullscreen) { /* Safari */
-        video.webkitRequestFullscreen();
-      } else if (video.msRequestFullscreen) { /* IE11 */
-        video.msRequestFullscreen();
-      }
-    });
+    document.querySelectorAll('.clickable').forEach(el => {
+      el.addEventListener('click', () => {
+        const newSrc = el.getAttribute('data-src');
+        source.src = newSrc;
+        video.load();
+        video.play();
+        hideContent();
+      });
+    });
 
-    // Handle fullscreen changes (e.g., if user exits fullscreen via ESC key)
-    document.addEventListener('fullscreenchange', () => {
-        if (!document.fullscreenElement) {
-            // When exiting fullscreen, we want the video to continue playing
-            // in its current view with controls.
-            // No explicit action is needed here because hideContent() already ensures
-            // mute and fullscreen buttons are visible when a specific video is playing,
-            // and the video itself continues playback.
-        }
-    });
+    backButton.addEventListener('click', () => {
+      showContent();
+    });
 
-    // Initial state setup
-    document.addEventListener('DOMContentLoaded', () => {
-        showContent(); // Ensures all buttons are in correct initial state
-    });
+    muteToggle.addEventListener('click', () => {
+      video.muted = !video.muted;
+      muteToggle.textContent = video.muted ? '🔇' : '🔊';
+      video.volume = video.muted ? 0 : 1.0;
+      // Update the stored state
+      isMuted = video.muted;
+    });
+
+    fullScreenToggle.addEventListener('click', () => {
+      if (video.requestFullscreen) {
+        video.requestFullscreen();
+      } else if (video.webkitRequestFullscreen) {
+        video.webkitRequestFullscreen();
+      } else if (video.msRequestFullscreen) {
+        video.msRequestFullscreen();
+      }
+    });
+
+    brightnessUpButton.addEventListener('click', () => {
+      // Increase brightness by 0.1, up to a max of 2.0 (200%)
+      currentBrightness = Math.min(currentBrightness + 0.1, 2.0);
+      video.style.filter = `brightness(${currentBrightness})`;
+    });
+
+    brightnessDownButton.addEventListener('click', () => {
+      // Decrease brightness by 0.1, down to a min of 0.5 (50%)
+      currentBrightness = Math.max(currentBrightness - 0.1, 0.5);
+      video.style.filter = `brightness(${currentBrightness})`;
+    });
+
+    // Handle fullscreen changes (e.g., if user exits fullscreen via ESC key)
+    document.addEventListener('fullscreenchange', () => {
+        if (!document.fullscreenElement) {
+            // Nothing to do here for now, as the filter remains on the video
+        }
+    });
+
+    // Initial state setup
+    document.addEventListener('DOMContentLoaded', () => {
+        showContent(); // Ensures all buttons are in correct initial state
+    });
 
   </script>
 
