--- a/pianist/index.html
+++ b/pianist/index.html
@@ -145,20 +145,20 @@
       
       <div class="perform">
         <h3>Watch the robot perform:</h3>
-        <span class="clickable" data-src="twinkle_twinkle.mp4">Twinkle Twinkle (fully learned)</span>
+        <span class="clickable" data-src="videos/twinkle_twinkle.mp4">Twinkle Twinkle<br>(fully learned)</span>
       </div>
 
       <div class="training-status">
         <hr style="margin: 20px auto; width: 60%; border: 0; border-top: 1px solid rgba(255,255,255,0.3);">
         <strong>Training in Progress</strong><br>
         Our robot is currently learning new pieces:<br>
-        <span class="clickable" data-src="my_favorite_things.mp4">My Favorite Things</span>
-        <span class="clickable" data-src="bach_invention4.mp4">Bach – Invention No. 4</span>
-        <span class="clickable" data-src="tchaikovsky_new_puppet.mp4">Tchaikovsky – New Puppet</span>
-        <span class="clickable" data-src="chopin_prelude.mp4">Chopin – Prelude</span>
-        <span class="clickable" data-src="mozart_funeral_march.mp4">Mozart – Funeral March</span>
-        <span class="clickable" data-src="time_to_pretend.mp4">MGMT – Time to Pretend</span>
-        <span class="clickable" data-src="diabelli_sonatina.mp4">Diabelli – Sonatina</span>
+        <span class="clickable" data-src="videos/my_favorite_things.mp4">My Favorite Things</span>
+        <span class="clickable" data-src="videos/bach_invention4.mp4">Bach – Invention No. 4</span>
+        <span class="clickable" data-src="videos/tchaikovsky_new_puppet.mp4">Tchaikovsky – New Puppet</span>
+        <span class="clickable" data-src="videos/chopin_prelude.mp4">Chopin – Prelude</span>
+        <span class="clickable" data-src="videos/mozart_funeral_march.mp4">Mozart – Funeral March</span>
+        <span class="clickable" data-src="videos/time_to_pretend.mp4">MGMT – Time to Pretend</span>
+        <span class="clickable" data-src="videos/diabelli_sonatina.mp4">Diabelli – Sonatina</span>
         <div class="note">
           <strong>Please note:</strong><br>
           Only <em>Twinkle Twinkle</em> shows a complete performance<br>
@@ -199,7 +199,7 @@
       // Stop the specific video and reset the background video
       video.pause();
       video.currentTime = 0;
-      source.src = "twinkle_twinkle.mp4";
+      source.src = "videos/twinkle_twinkle.mp4";
       video.load();
       video.muted = true; // Ensure background video is muted
       video.play();
