--- a/pianist/index.html
+++ b/pianist/index.html
@@ -30,6 +30,9 @@
       z-index: 0;
       cursor: pointer;
     }
+    video.hidden {
+      opacity: 0.5;
+    }
     .overlay {
       position: fixed;
       top: 0;
@@ -62,6 +65,7 @@
       font-size: 2.5em;
       margin-top: 60px;
       margin-bottom: 0.5em;
+      text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
     }
     .training-status {
       padding: 16px 24px;
@@ -195,6 +199,7 @@
       muteToggle.style.display = 'block';
       fullScreenToggle.style.display = 'none';
       backButton.style.display = 'none';
+      video.style.display = 'none'
       
       // Stop the specific video and reset the background video
       video.pause();
